smart load template file

--- a/vimfiles/template/template.html
+++ b/vimfiles/template/template.html
@@ -1,18 +1,16 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-CN" lang="zh-CN">
 <head>
-<meta name="generator" content="gvim" />
-<meta name="author" content="闲耘 (mail[AT]xianyun.org)" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta name="generator" content="gvim" />
+<meta name="author" content="闲耘™ (hotoo.cn[AT]gmail.com)" />
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-<title>#cursor#</title>
+<title>${FileName}</title>
 </head>
 <body>
-
+    ${cursor}
 </body>
 </html>
-
