--- a/vimfiles/template/template.css
+++ b/vimfiles/template/template.css
@@ -1,3 +1,9 @@
-@charset "utf-8"
+@charset "utf-8";
 
-${cursor}
+/**
+ * ${filename}.css
+ *
+ * @author ${author}
+ * @version ${date}
+ */
+html,body{margin:0; padding:0; ${cursor}}
